    bin/ubiquity-dm correctly using budgie-wm which is provided by budgie-core

  [ Mathieu Trudel-Lapierre ]
  * Move sources to artful instead of zesty.
  * Automatic update of included source packages: choose-mirror
    2.78ubuntu2, grub-installer 1.128ubuntu8, netcfg 1.142ubuntu2,
    partman-basicmethods 62, partman-lvm 114, preseed 1.71ubuntu5, tzsetup
    1:0.94ubuntu1.

  [ Jeremy Soller ]
  * Add support for WPA2 Enterprise.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Mon, 17 Jul 2017 16:29:00 -0400

ubiquity (17.04.9) zesty; urgency=medium

  * tests/test_misc.py: Really fix test for the 'ta' keymap: check for
    lk/tam_TAB in the list rather than asserting that it needs to be the first
    element; and allow for the different list size now.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Sun, 09 Apr 2017 21:53:53 -0400

ubiquity (17.04.8) zesty; urgency=medium

  [ Mathieu Trudel-Lapierre ]
  * Automatic update of included source packages: choose-mirror
    2.78ubuntu1, hw-detect 1.117ubuntu4, netcfg 1.138ubuntu5.
  * d-i/lists/powerpc: Don't get powerpc anymore. That means debian/control
    also drops powerpc packages: partman-newworld and yaboot-installer.
  * Update translations from Launchpad.
  * tests/test_misc.py: Update lang/xkb keymap selection tests; ta now returns
    the "lk" code by default (Sri Lanka), apparently.

  [ Jeremy Bicha ]
  * ubiquity-dm: Fix Ubuntu GNOME missing window decorations (LP: #1675210)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Fri, 07 Apr 2017 13:11:27 -0400

ubiquity (17.04.7) zesty; urgency=medium

  [ David Mohammed ]
  * ubiquity-dm: don't skip settings-daemon; Ubuntu Budgie should use the
    gnome-settings-daemon included on the livefs. (LP: #1663058)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Fri, 10 Feb 2017 11:20:44 -0500

ubiquity (17.04.6) zesty; urgency=medium

  [ Walter Lapchynski ]
  * Provide an error when insufficient disk space is detected in the Prepare