@@ -1,0 +1,3 @@
+- Go through any "except Exception:" and make it more explicit, listing the
+  exact exception we expect to catch there. We may want to otherwise deal with
+  the truly unexpected some different way in some cases.
