@@ -277,7 +277,7 @@ def install(frontend=None, query=False):
         import traceback
         try:
             apply_keyboard()
-        except:
+        except Exception:
             traceback.print_exc()
     copy_debconf()
     unmount_target()
