@@ -15,6 +15,7 @@ ubiquity (17.10.1) UNRELEASED; urgency=medium
     2.78ubuntu2, grub-installer 1.128ubuntu8, netcfg 1.142ubuntu2,
     partman-basicmethods 62, partman-lvm 114, preseed 1.71ubuntu5, tzsetup
     1:0.94ubuntu1.
+  * Style cleanup to remove bare except: cases, as pointed out by pep8.
 
   [ Jeremy Soller ]
   * Add support for WPA2 Enterprise.
